cambios a la página

--- a/paginapersonal.html
+++ b/paginapersonal.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1><center>Marco Randu Retana Vargas</center></h1>
-    <h2>Tegno 20 años y estoy estudiando la carrera de Ingeniería en Tecnologías Computacionales, </h2>
+    <h2><center>Tengo 20 años y estoy estudiando la carrera de Ingeniería en Tecnologías Computacionales</center></h2>
+    <h3>INTRODUCIR CALIFICACIÓN: <input type="text" id="comment" name="comment" value="100"></input></h3>
     <ul>
         <li>
             <details>
