--- a/laboratorio4/paginalab4.html
+++ b/laboratorio4/paginalab4.html
@@ -10,5 +10,7 @@
     <script src="js.js"></script>
     <script src="js2.js"></script>
     <script src="js3.js"></script>
+    <script src="js4.js"></script>
+    <script src="js5.js"></script>
 </body>
 </html>
