Agrega input desactivado

--- a/lab6/paginalab6.html
+++ b/lab6/paginalab6.html
@@ -10,7 +10,7 @@
 <body>
     <header class="title"><center>Password validator</center></header>
     <input id="psw1" class="input" type="password" placeholder="Password">
-    <input id="psw2" class="input" type="password" placeholder="Confirm password">
+    <input id="psw2" class="input" type="password" placeholder="Confirm password" disabled>
     <script src="passwords.js"></script>
 </body> 
 </html>
